remctl (2.16-2) UNRELEASED; urgency=low

  * Skip the getaddrinfo invalid host test if foo.invalid resolves using
    gethostbyname.  This hopefully works around build issues on kFreeBSD.
    (See #626047)

 -- Russ Allbery <rra@debian.org>  Tue, 10 May 2011 20:42:18 -0700

remctl (2.16-1) unstable; urgency=low

  * New upstream release.
    - Add Ruby bindings (install libremctl-ruby).
    - Add support for PCRE and regex ACLs in the remctl server.
    - remctld now sets REMCTL_COMMAND to the command run.
  * Use dh_gencontrol -- -V to pass the PHP version substvar instead of
    writing it to the substvars file.
  * Switch to 3.0 (quilt) source format.  Force a single Debian patch and
    include a custom patch header explaining that it is a rollup of any
    fixes cherry-picked from upstream and breaking those patches out
    separately would be work for no gain.

 -- Russ Allbery <rra@debian.org>  Sun, 02 May 2010 18:13:50 -0700

remctl (2.15-3) unstable; urgency=low

  * Make use of the new Makefile variables in the upstream 2.15 release to
    control the Python installation and test suite.  Hopefully fixes
    installation with Python 2.6 as the default.  (Closes: #571509)
  * Fix the PHP tests to work properly with PHP 5.3, which no longer
    passes environment variables through to the running test programs.
  * Downgrade the libremctl-dev dependency on libkrb5-dev to suggests
    since it's only required for static linking.
  * Fix a spelling error in the Net::Remctl man page.
  * Update standards version to 3.8.4 (no changes required).

 -- Russ Allbery <rra@debian.org>  Thu, 25 Feb 2010 18:06:48 -0800

remctl (2.15-2) unstable; urgency=low

  * Do not add php5 as an alternative to the phpapi dependency in
    php5-remctl, fixing problems with the upcoming PHP 5.3 transition.
    Thanks, Raphael Geissert.  (Closes: #566300)

 -- Russ Allbery <rra@debian.org>  Fri, 22 Jan 2010 11:21:37 -0800

remctl (2.15-1) unstable; urgency=low
